# MSG-Net

./: .gitignore  CMakeLists.txt  Examples.md  README.md  Training.md  init.lua  texture-scm-1.rockspec
experiments/: extractGram.lua  main.lua  opts.lua  test.lua  webcam.lua
experiments/models/: download_models.sh  hang.lua
experiments/utils/: DataLoader.lua  getImages.lua  preprocess.lua
modules/: Calibrate.lua  ContentLoss.lua  GramMatrix.lua  Inspiration.lua  PerceptualCriterion.lua  StyleLoss.lua  utils.lua
